pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-243-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/243-block_quotes.md
---
    [3mfoo[0m[3m bar[0m
